Using a composite partition key for artist_song_user.

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,23 +355,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CREATE TABLE IF NOT EXISTS songs_by_session(artist text, iteminsession int, length float, sessionid int, song text, PRIMARY KEY (sessionid, iteminsession))\n"
+      "CREATE TABLE IF NOT EXISTS songs_by_session(sessionid int, iteminsession int, artist text, length float, song text, PRIMARY KEY (sessionid, iteminsession))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<cassandra.cluster.ResultSet at 0x241d3594eb0>"
+       "<cassandra.cluster.ResultSet at 0x1b4ec463460>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -661,31 +661,31 @@
     "    * `last_name`\n",
     "    * `sessionid`\n",
     "* Primary Key:\n",
-    "    * Partition Key: `userid`\n",
-    "    * Clustering column: `sessionid`, `iteminsession`\n",
+    "    * Partition Key: `userid`, `sessionid`\n",
+    "    * Clustering column: `iteminsession`\n",
     "    \n",
     "In this case we have included iteminsession as clustering column to sort the table by this column. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CREATE TABLE IF NOT EXISTS artist_song_user(artist text, song text, userid int, iteminsession int, first_name text, last_name text, sessionid int, PRIMARY KEY (userid, sessionid, iteminsession))\n"
+      "CREATE TABLE IF NOT EXISTS artist_song_user(userid int, sessionid int, iteminsession int, artist text, song text, first_name text, last_name text, PRIMARY KEY (userid, sessionid, iteminsession))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<cassandra.cluster.ResultSet at 0x241d366ebe0>"
+       "<cassandra.cluster.ResultSet at 0x1b4ebfdba30>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,15 +710,15 @@
     "        }).\\\n",
     "    define_primary_key(\n",
     "        primary_key={\n",
-    "            'partition': ['userid'],\n",
-    "            'clustering': ['sessionid', 'iteminsession']\n",
+    "            'partition': ['userid', 'sessionid'],\n",
+    "            'clustering': ['iteminsession']\n",
     "        }).\\\n",
     "    execute()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -801,23 +801,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CREATE TABLE IF NOT EXISTS user_song_table(userid int, first_name text, last_name text, song text, PRIMARY KEY (song, userid))\n"
+      "CREATE TABLE IF NOT EXISTS user_song_table(song text, userid int, first_name text, last_name text, PRIMARY KEY (song, userid))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<cassandra.cluster.ResultSet at 0x241d3720e80>"
+       "<cassandra.cluster.ResultSet at 0x1b4ed26fd60>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +944,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -958,7 +958,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
